WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313605
Absolutely positioned table ignores min-height and shrinks below content height
https://bugs.webkit.org/show_bug.cgi?id=313605
Summary
Absolutely positioned table ignores min-height and shrinks below content height
alan
Reported
2026-04-28 17:52:34 PDT
ssia
Attachments
Patch
(5.88 KB, patch)
2026-04-28 18:07 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.20 KB, patch)
2026-04-28 18:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.20 KB, patch)
2026-04-29 07:31 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.40 KB, patch)
2026-04-29 08:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(5.40 KB, patch)
2026-04-29 10:36 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-28 18:07:35 PDT
Created
attachment 479361
[details]
Patch
alan
Comment 2
2026-04-28 18:13:41 PDT
Created
attachment 479362
[details]
Patch
alan
Comment 3
2026-04-29 07:31:45 PDT
Created
attachment 479371
[details]
Patch
alan
Comment 4
2026-04-29 08:38:37 PDT
Created
attachment 479372
[details]
Patch
alan
Comment 5
2026-04-29 10:36:21 PDT
Created
attachment 479374
[details]
[fast-cq]Patch
EWS
Comment 6
2026-04-29 14:05:49 PDT
Committed
312313@main
(b52469f4fcd7): <
https://commits.webkit.org/312313@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479374
[details]
.
Radar WebKit Bug Importer
Comment 7
2026-04-29 14:06:13 PDT
<
rdar://problem/175883577
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug